--- a/Kossu/project/Kossu/Kossu.vcxproj
+++ b/Kossu/project/Kossu/Kossu.vcxproj
@@ -88,6 +88,7 @@
     <ClCompile Include="GameHandler.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="Input.cpp" />
+    <ClCompile Include="Level.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mainmenu.cpp" />
     <ClCompile Include="Player.cpp" />
@@ -99,6 +100,7 @@
     <ClInclude Include="GameHandler.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="Input.h" />
+    <ClInclude Include="Level.h" />
     <ClInclude Include="Mainmenu.h" />
     <ClInclude Include="Player.h" />
     <ClInclude Include="Render.h" />
