--- a/Kossu/project/Kossu/Kossu.vcxproj
+++ b/Kossu/project/Kossu/Kossu.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Mainmenu.cpp" />
     <ClCompile Include="Player.cpp" />
+    <ClCompile Include="Player2.cpp" />
     <ClCompile Include="Render.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -103,6 +104,7 @@
     <ClInclude Include="Level.h" />
     <ClInclude Include="Mainmenu.h" />
     <ClInclude Include="Player.h" />
+    <ClInclude Include="Player2.h" />
     <ClInclude Include="Render.h" />
   </ItemGroup>
   <ItemGroup>
