--- a/Kossu/project/Kossu/Kossu.vcxproj.filters
+++ b/Kossu/project/Kossu/Kossu.vcxproj.filters
@@ -80,6 +80,9 @@
     <ClInclude Include="Player2.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Global.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="old.txt">
